# test_sqlite

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: database.py  main.py  test.db
app/migrations/: env.py
app/migrations/versions/: a3537ec8205a_.py
app/taskss/: model.py  repo.py  router.py
